<resources>
    <string name="app_name">NeweR</string>
    <string name="title_activity_main">Headlines</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_savedArticlesCatalog">Saved Articles</string>
    <string name="title_activity_editNewsSource">Edit Sources</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_section_label">SECTIONS</string>
    <string name="menu_top_stories">Top Stories</string>
    <string name="menu_custom">My Section</string>
    <string name="menu_world">World</string>
    <string name="menu_Business">Business</string>
    <string name="menu_technology">Technology</string>
    <string name="menu_entertainment">Entertainment</string>
    <string name="menu_sport">Sport</string>
    <string name="menu_science">Science</string>
    <string name="menu_health">Health</string>
    <string name="menu_offline_label">OFFLINE</string>
    <string name="menu_change_source">Edit news sources</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_about">About</string>
    <string name="action_reset">Reset</string>
    <string name="no_internet_connectivity">No internet connection available!</string>
    <string name="offline_mode_suggestion">Switch to offline mode to read your saved articles.</string>
    <string name="no_articles_found">No stories available!</string>
    <string name="no_internet_suggestion">Please check your internet connection.</string>
    <string name="loading_feedback">Loading&#8230;</string>
    <string name="searching_feedback">Searching&#8230;</string>
    <string name="search_empty_header">Search through millions of articles from over 30,000 large and small news sources and blogs.</string>
    <string name="search_edit_text_hint">Enter keyword or phrases to search..</string>
    <string name="search_activity_no_results_feedback">No relevant articles found!,
        try rephrasing the search terms.</string>
    <string name="edit_news_source_no_news_sources_found">No news sources available!</string>
    <string name="edit_news_source_reset_dialog_confiramation">Are you sure?</string>
    <string name="custom_categoty_fragment_welcome_greet">Welcome! to My section</string>
    <string name="custom_category_fragment_no_news_sources_suggestion">Customise your news feed by choosing single or multiple news sources.</string>
    <string name="author_by_label">By</string>
    <string name="share_button_label_text">Share</string>
    <string name="save_button_label_text">Save</string>
    <string name="readMore_button_label_text">Read More</string>
    <string name="prev_page">prev</string>
    <string name="next_page">next</string>
    <string name="page_text">page 1</string>
    <string name="sortByLabel">Sort By :</string>
    <string name="sortBy_relevancy">Relevancy</string>
    <string name="sortBy_popularity">Popularity</string>
    <string name="sortBy_publishedAt">Published At</string>
    <string name="sortBy_Apply">Apply</string>
    <string name="chooser_title">Share article</string>
    <string name="pref_country_title">Country</string>
    <string name="pref_country_key">pref_country</string>
    <string name="pref_country_dialog">Choose a country</string>
    <string name="pref_country_default" translatable="false">@string/country_india_value</string>
    <string name="country_settings_hint">Articles will be shown from chosen country news sources in their respective languages.</string>
    <string name="country_argentina_label">Argentina</string>
    <string name="country_australia_label">Australia</string>
    <string name="country_austria_label">Austria</string>
    <string name="country_belgium_label">Belgium</string>
    <string name="country_brazil_label">Brazil</string>
    <string name="country_bulgaria_label">Bulgaria</string>
    <string name="country_canada_label">Canada</string>
    <string name="country_china_label">China</string>
    <string name="country_columbia_label">Columbia</string>
    <string name="country_cuba_label">Cuba</string>
    <string name="country_czech_republic_label">Czech Republic</string>
    <string name="country_egypt_label">Egypt</string>
    <string name="country_france_label">France</string>
    <string name="country_germany_label">Germany</string>
    <string name="country_greece_label">Greece</string>
    <string name="country_hongkong_label">Hong Kong</string>
    <string name="country_hungary_label">Hungary</string>
    <string name="country_india_label">India</string>
    <string name="country_indonesia_label">Indonesia</string>
    <string name="country_ireland_label">Ireland</string>
    <string name="country_israel_label">Israel</string>
    <string name="country_italy_label">Italy</string>
    <string name="country_japan_label">Japan</string>
    <string name="country_latvia_label">Latvia</string>
    <string name="country_lithuania_label">Lithuania</string>
    <string name="country_malaysia_label">Malaysia</string>
    <string name="country_mexico_label">Mexico</string>
    <string name="country_morocco_label">Morocco</string>
    <string name="country_netherlands_label">Netherlands</string>
    <string name="country_new_zealand_label">New Zealand</string>
    <string name="country_nigeria_label">Nigeria</string>
    <string name="country_norway_label">Norway</string>
    <string name="country_philippines_label">Philippines</string>
    <string name="country_poland_label">Poland</string>
    <string name="country_portugal_label">Portugal</string>
    <string name="country_romania_label">Romania</string>
    <string name="country_russia_label">Russia</string>
    <string name="country_saudi_arabia_label">Saudi Arabia</string>
    <string name="country_serbia_label">Serbia</string>
    <string name="country_singapore_label">Singapore</string>
    <string name="country_slovakia_label">Slovakia</string>
    <string name="country_slovenia_label">Slovenia</string>
    <string name="country_south_africa_label">South Africa</string>
    <string name="country_south_korea_label">South Korea</string>
    <string name="country_sweden_label">Sweden</string>
    <string name="country_switzerland_label">Switzerland</string>
    <string name="country_taiwan_label">Taiwan</string>
    <string name="country_thailand_label">Thailand</string>
    <string name="country_turkey_label">Turkey</string>
    <string name="country_uae_label">UAE</string>
    <string name="country_ukraine_label">Ukraine</string>
    <string name="country_uk_label">United Kingdom</string>
    <string name="country_us_label">United States</string>
    <string name="country_venezuela_label">Venezuela</string>
    <string name="country_uae_value" translatable="false">ae</string>
    <string name="country_argentina_value" translatable="false">ar</string>
    <string name="country_india_value" translatable="false">in</string>
    <string name="country_australia_value" translatable="false">au</string>
    <string name="country_belgium_value" translatable="false">be</string>
    <string name="country_austria_value" translatable="false">at</string>
    <string name="country_brazil_value" translatable="false">br</string>
    <string name="country_bulgaria_value" translatable="false">bg</string>
    <string name="country_canada_value" translatable="false">ca</string>
    <string name="country_china_value" translatable="false">cn</string>
    <string name="country_columbia_value" translatable="false">co</string>
    <string name="country_cuba_value" translatable="false">cu</string>
    <string name="country_czech_republic_value" translatable="false">cz</string>
    <string name="country_egypt_value" translatable="false">eg</string>
    <string name="country_france_value" translatable="false">fr</string>
    <string name="country_germany_value" translatable="false">de</string>
    <string name="country_greece_value" translatable="false">gr</string>
    <string name="country_hongkong_value" translatable="false">hk</string>
    <string name="country_hungary_value" translatable="false">hu</string>
    <string name="country_indonesia_value" translatable="false">id</string>
    <string name="country_ireland_value" translatable="false">ie</string>
    <string name="country_israel_value" translatable="false">il</string>
    <string name="country_italy_value" translatable="false">it</string>
    <string name="country_japan_value" translatable="false">jp</string>
    <string name="country_latvia_value" translatable="false">lv</string>
    <string name="country_lithuania_value" translatable="false">lt</string>
    <string name="country_malaysia_value" translatable="false">my</string>
    <string name="country_mexico_value" translatable="false">mx</string>
    <string name="country_morocco_value" translatable="false">ma</string>
    <string name="country_netherlands_value" translatable="false">nl</string>
    <string name="country_new_zealand_value" translatable="false">nz</string>
    <string name="country_nigeria_value" translatable="false">ng</string>
    <string name="country_norway_value" translatable="false">no</string>
    <string name="country_philippines_value" translatable="false">ph</string>
    <string name="country_poland_value" translatable="false">pl</string>
    <string name="country_portugal_value" translatable="false">pt</string>
    <string name="country_romania_value" translatable="false">ro</string>
    <string name="country_russia_value" translatable="false">ru</string>
    <string name="country_saudi_arabia_value" translatable="false">sa</string>
    <string name="country_serbia_value" translatable="false">rs</string>
    <string name="country_singapore_value" translatable="false">sg</string>
    <string name="country_slovakia_value" translatable="false">sk</string>
    <string name="country_slovenia_value" translatable="false">si</string>
    <string name="country_south_africa_value" translatable="false">za</string>
    <string name="country_south_korea_value" translatable="false">kr</string>
    <string name="country_sweden_value" translatable="false">se</string>
    <string name="country_switzerland_value" translatable="false">ch</string>
    <string name="country_taiwan_value" translatable="false">tw</string>
    <string name="country_thailand_value" translatable="false">th</string>
    <string name="country_turkey_value" translatable="false">tr</string>
    <string name="country_ukraine_value" translatable="false">ua</string>
    <string name="country_uk_value" translatable="false">gb</string>
    <string name="country_us_value" translatable="false">us</string>
    <string name="country_venezuela_value" translatable="false">ve</string>
    <string name="country_label">Country</string>
    <string name="language_label">Language</string>
    <string name="category_sort_label">Category</string>
    <string name="category_general_label">General</string>
    <string name="empty_list_descriptiontext">Get breaking news headlines from your favourite news Sources.</string>
    <string name="empty_list_suggestiontext">* Choose a country or a language.</string>
    <string name="language_arabic_label">Arabic</string>
    <string name="language_german_label">German</string>
    <string name="language_english_label">English</string>
    <string name="language_spanish_label">Spanish</string>
    <string name="language_french_label">French</string>
    <string name="language_hebrew_label">Hebrew</string>
    <string name="language_italian_label">Italian</string>
    <string name="language_dutch_label">Dutch</string>
    <string name="language_norwegian_label">Norwegian</string>
</resources>