<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="10"
        app:showAsAction="always"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="50"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_refresh_white_24dp"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="110"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
