<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.rajeev.newer.activities.EditNewsSourceActivity">

    <LinearLayout
        android:id="@+id/spinners_body_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@color/cardview_light_background">

        <LinearLayout
            android:id="@+id/spinners_label_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/country_text_label"
                style="@style/EditNewsSource_spinners_label_style"
                android:text="@string/country_label"
                android:layout_marginEnd="4dp"
                />

            <TextView
                android:id="@+id/language_text_label"
                style="@style/EditNewsSource_spinners_label_style"
                android:text="@string/language_label" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/spinners_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <Spinner
                android:id="@+id/country_selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dialog"/>

            <Spinner
                android:id="@+id/language_selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dialog"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/category_text_label"
                style="@style/EditNewsSource_spinners_label_style"
                android:text="@string/category_sort_label"
                />

            <Spinner
                android:id="@+id/category_selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                />

        </LinearLayout>

        <Button
            android:id="@+id/news_source_apply_operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/sortBy_Apply"
            android:drawableStart="@drawable/ic_check_black_24dp"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <View
        android:id="@+id/divider_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_below="@id/spinners_body_container"/>
    <ListView
        android:id="@+id/edit_news_sources_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider_line"
        android:divider="@color/colorAccent"
        android:paddingTop="8dp"
        android:clipToPadding="false"
        android:footerDividersEnabled="false"
        android:dividerHeight="0.5dp" />
    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_indicator_editNewsSource"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />
    <RelativeLayout
        android:id="@+id/empty_list_view_editNewsSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/empty_list_suggestion_editNewsSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="8dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/empty_list_descriptiontext"
            />
        <TextView
            android:id="@+id/empty_list_textView1_editNewsSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/empty_list_suggestion_editNewsSource"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/empty_list_suggestiontext"
            android:textAppearance="?android:textAppearanceSmall" />
    </RelativeLayout>
</RelativeLayout>
